<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_movie_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_image"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_movie_photo"
        android:text="@string/movie_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_movie_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_movie_name"
        android:layout_toEndOf="@id/img_movie_photo"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/movie_desc"/>


</RelativeLayout>